{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 27,
  "lineage": "0b3cecb2-adc9-d660-2f11-af635a2dfb68",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0985f929cb9fd20d6",
            "association_id": "eipassoc-04c07cb3bdc9bb625",
            "domain": "vpc",
            "id": "eipalloc-0985f929cb9fd20d6",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0cbe7af123bdf5156",
            "private_dns": "ip-10-0-3-177.ap-southeast-1.compute.internal",
            "private_ip": "10.0.3.177",
            "public_dns": "ec2-13-228-143-93.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.228.143.93",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:internet-gateway/igw-0538b853fa354c4da",
            "id": "igw-0538b853fa354c4da",
            "owner_id": "862605034458",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "vpc_id": "vpc-0ebf201dc5144bad8"
          },
          "dependencies": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0985f929cb9fd20d6",
            "connectivity_type": "public",
            "id": "nat-00759cf2aae8137bc",
            "network_interface_id": "eni-0cbe7af123bdf5156",
            "private_ip": "10.0.3.177",
            "public_ip": "13.228.143.93",
            "subnet_id": "subnet-0c6a6f632178f1889",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-1a",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:route-table/rtb-0d1a624f23ac3e408",
            "id": "rtb-0d1a624f23ac3e408",
            "owner_id": "862605034458",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00759cf2aae8137bc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebf201dc5144bad8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:route-table/rtb-00bb81f59240687ca",
            "id": "rtb-00bb81f59240687ca",
            "owner_id": "862605034458",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0538b853fa354c4da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebf201dc5144bad8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b04ec9df233ea42",
            "route_table_id": "rtb-0d1a624f23ac3e408",
            "subnet_id": "subnet-0cda8bfc72cd7b6ee"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-1a",
            "aws_subnet.public-1a",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d003ca81c4402d7",
            "route_table_id": "rtb-0d1a624f23ac3e408",
            "subnet_id": "subnet-0e0beba2ae1cf5759"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-1b",
            "aws_subnet.public-1a",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae681d4328226c2e",
            "route_table_id": "rtb-00bb81f59240687ca",
            "subnet_id": "subnet-0c6a6f632178f1889"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-1a",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01419cbf90c419431",
            "route_table_id": "rtb-00bb81f59240687ca",
            "subnet_id": "subnet-0cce7ea3323b28422"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-1b",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:subnet/subnet-0cda8bfc72cd7b6ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cda8bfc72cd7b6ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862605034458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "vpc_id": "vpc-0ebf201dc5144bad8"
          },
          "dependencies": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:subnet/subnet-0e0beba2ae1cf5759",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0beba2ae1cf5759",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862605034458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "vpc_id": "vpc-0ebf201dc5144bad8"
          },
          "dependencies": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:subnet/subnet-0c6a6f632178f1889",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6a6f632178f1889",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862605034458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "vpc_id": "vpc-0ebf201dc5144bad8"
          },
          "dependencies": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:subnet/subnet-0cce7ea3323b28422",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cce7ea3323b28422",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862605034458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "vpc_id": "vpc-0ebf201dc5144bad8"
          },
          "dependencies": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "workshop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:vpc/vpc-0ebf201dc5144bad8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e5a62b4de2a02f07",
            "default_route_table_id": "rtb-0fa00945b535e082f",
            "default_security_group_id": "sg-0be210c4b583bc87a",
            "dhcp_options_id": "dopt-039d5cdacd575ac4a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ebf201dc5144bad8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa00945b535e082f",
            "owner_id": "862605034458",
            "tags": {
              "Cluster": "training",
              "Name": "group-1"
            },
            "tags_all": {
              "Cluster": "training",
              "Name": "group-1"
            }
          }
        }
      ]
    }
  ]
}